--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "redux": "^4.0.5",
     "redux-firestore": "^0.15.0",
     "redux-thunk": "^2.3.0",
+    "styled-components": "^5.2.1",
     "web-vitals": "^1.1.0",
     "yup": "^0.32.9"
   },
