--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "@testing-library/user-event": "^12.8.1",
     "bootstrap": "^4.6.0",
     "firebase": "^8.2.10",
-    "formik": "^2.2.6",
     "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -19,9 +18,7 @@
     "redux": "^4.0.5",
     "redux-firestore": "^0.15.0",
     "redux-thunk": "^2.3.0",
-    "styled-components": "^5.2.1",
-    "web-vitals": "^1.1.0",
-    "yup": "^0.32.9"
+    "web-vitals": "^1.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
